fix animation/navigation on mobile nav.

--- a/src/sass/custom.scss
+++ b/src/sass/custom.scss
@@ -51,7 +51,7 @@
   transform: rotate(0deg);
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
-  transition-duration: 0.4s;
+  transition-duration: 0.5s;
 }
 
 .rotate
@@ -59,7 +59,7 @@
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
   -moz-transform: rotate(180deg);
-  transition-duration: 0.4s;
+  transition-duration: 0.5s;
 }
 
 .logo img {
